--- a/_posts/2016-06-26-Adaboost.md
+++ b/_posts/2016-06-26-Adaboost.md
@@ -2,7 +2,7 @@
 published: true
 author: Charles
 layout: post
-title:  "Adaboost模型"
+title:  "AdaBoost模型"
 date:   2016-06-26 8:30
 categories: 机器学习
 ---
@@ -27,7 +27,7 @@ Boosting可以用下面的公式来表示：
 
 #### 算法流程
 
-具体说来，整个Adaboost 迭代算法就3步：
+具体说来，整个AdaBoost 迭代算法就3步：
 
 - 初始化训练数据的权值分布。如果有$N$个样本，则每一个训练样本最开始时都被赋予相同的权值：$\frac{1}{N}$。
 - 训练弱分类器。具体训练过程中，如果某个样本点已经被准确地分类，那么在构造下一个训练集中，它的权值就被降低；相反，如果某个样本点没有被准确地分类，那么它的权值就得到提高。然后，权值更新过的样本集被用于训练下一个分类器，整个训练过程如此迭代地进行下去。
@@ -45,7 +45,7 @@ $$
 
 #### 举个栗子
 
-下面我们举一个简单的例子来看看adaboost的实现过程[^4][^6]：
+下面我们举一个简单的例子来看看AdaBoost的实现过程[^4][^6]：
 
 ![][4]
 
