--- a/_posts/2016-06-27-GBDT.md
+++ b/_posts/2016-06-27-GBDT.md
@@ -44,4 +44,5 @@ $$\text{Gradient Boosting} = \text{Gradient Descent} + \text{Boosting}$$
 [^1]:[决策树模型组合之随机森林与GBDT](http://www.cnblogs.com/LeftNotEasy/archive/2011/03/07/random-forest-and-gbdt.html)
 [^2]:[深入浅出ML之Boosting家族](http://www.52caml.com/head_first_ml/ml-chapter6-boosting-family/)
 [^3]:[A Gentle Introduction to Gradient Boosting](http://www.chengli.io/tutorials/gradient_boosting.pdf)
+[^4]:[Greedy Function Approximation: A Gradient Boosting Machine](http://statweb.stanford.edu/~jhf/ftp/trebst.pdf)
 
