--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -6,3 +6,11 @@ title:  "HDBSCAN算法"
 date:   2016-06-30 8:30
 categories: 机器学习 推荐系统
 ---
+
+#### 最小生成树
+
+对于一个有n个点的图，最少需要n-1条边使得这n个点连通，由这n-1条边组成的子图则称为原图的生成树。
+
+>　当图中的边具有权值时，总会有一个生成树的边的权值之和小于或者等于其它生成树的边的权值之和，这就是最小生成子树。
+
+http://blog.csdn.net/fengchaokobe/article/details/7521780
