--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -19,7 +19,7 @@ categories: 机器学习 推荐系统
 
 **MST性质：**
 
-> 设一个带权无向图$G(V,E,W)$ （V代表点集，E代表边集，W代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$Ｔ$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足MST性质。
+> 设一个带权无向图$G(V,E,W)$ （$V$代表点集，$E$代表边集，$W$代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$T$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足MST性质。
 
 http://blog.csdn.net/fengchaokobe/article/details/7521780
 
