--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -19,8 +19,23 @@ categories: 机器学习 推荐系统
 
 **MST性质：**
 
-> 设一个带权无向图$G(V,E,W)$ （$V$代表点集，$E$代表边集，$W$代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$T$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足MST性质。
+> 设一个带权无向图$G(V,E,W)$ （$V$代表点集，$E$代表边集，$W$代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$T$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足$MST$性质。
+
+---
+
+#### HDBSCAN
+
+- 核心距离$core_k(x)$：
+
+$$core_k(x) = d(x,N^{\mathcal{k}}(x))$$
+
+> 核心距离定义为当前点到其第$k$近的点的距离。
+
+![][2]
+
+- mutual reachability distance
 
 http://blog.csdn.net/fengchaokobe/article/details/7521780
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
+[2]:http://7xjbdi.com1.z0.glb.clouddn.com/distance1.svg
