--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -33,7 +33,9 @@ $$core_k(x) = d(x,N^{\mathcal{k}}(x))$$
 
 ![][2]
 
-- mutual reachability distance
+- **mutual reachability distance**
+
+$$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(a,b) \}$$
 
 http://blog.csdn.net/fengchaokobe/article/details/7521780
 
