--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -33,11 +33,15 @@ $$core_k(x) = d(x,N^{\mathcal{k}}(x))$$
 
 ![][2]
 
-- **mutual reachability distance**
+- 互达距离：**mutual reachability distance**
 
 $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(a,b) \}$$
 
-http://blog.csdn.net/fengchaokobe/article/details/7521780
+> 互达距离是由两者共同决定的。
+
+![][3]
+
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/distance1.svg
+[3]:http://7xjbdi.com1.z0.glb.clouddn.com/m_reach.png
