--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -45,12 +45,14 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 #### 最小生成子树
 
-我们可以像谱聚类那样生成一个图，每个数据点作为图的一个顶点，边的权重为两顶点之间的互达距离。
+我们可以像谱聚类那样生成一个图，每个数据点作为图的一个顶点，边的权重设置为两顶点之间的互达距离。
 
-可以设置一个阈值$\epsilon$，权重大于$\epsilon$的边我们删除掉，随着阈值由大到小的变化，整个图的连通性会发生变化，每一个联通区域我们看做一个团簇的话，我们可以得到一个随$\epsilon$变化的层次聚类结果。
+假设有一个阈值$\epsilon$，权重大于$\epsilon$的边我们删除掉，随着阈值由大到小的变化，整个图的连通性会发生变化。每一个连通区域我们看做一个团簇的话，我们可以得到一个随$\epsilon$变化的层次聚类结果。
 
+![][4]
 
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/distance1.svg
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/m_reach.png
+[4]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchy_cluster.png
