--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -7,22 +7,6 @@ date:   2016-06-30 8:30
 categories: 机器学习 推荐系统
 ---
 
-#### 最小生成树
-
-对于一个有$n$个点的图，最少需要$n-1$条边使得这$n$个点连通，由这$n-1$条边组成的子图则称为原图的生成树。
-
-> 当图中的边具有权值时，总会有一个生成树的边的权值之和小于或者等于其它生成树的边的权值之和，这就是最小生成子树。
-
-![][1]
-
----
-
-**MST性质：**
-
-> 设一个带权无向图$G(V,E,W)$ （$V$代表点集，$E$代表边集，$W$代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$T$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足$MST$性质。
-
----
-
 #### HDBSCAN
 
 - 核心距离$core_k(x)$：
@@ -50,6 +34,30 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 假设有一个阈值$\epsilon$，权重大于$\epsilon$的边我们删除掉，随着阈值由大到小的变化，整个图的连通性会发生变化。每一个连通区域我们看做一个团簇的话，我们可以得到一个随$\epsilon$变化的层次聚类结果。
 
 ![][4]
+
+最简单的想法是，每设置一个阈值，我们对图进行一次 connected components 判断，这样效率太低，实际上我们可以利用最小生成子树来达到我们的目的。
+
+我们来简单分析一下，我们的目标是希望找到一个边的集合，我们删除这个集合里面的任何一条边，图的连通性都会发生变化（某个连通区域会分裂成两个连通区域），同时要确保权重最小的边可以连接分裂后的连通区域。
+
+>  The right thing to do is to find a minimal set of edges such that dropping any edge from the set causes a disconnection of components. But we need more, we need this set to be such that there is no lower weight edge that could connect the components. Fortunately graph theory furnishes us with just such a thing: the minimum spanning tree of the graph.
+
+---
+
+#### 最小生成树
+
+对于一个有$n$个点的图，最少需要$n-1$条边使得这$n$个点连通，由这$n-1$条边组成的子图则称为原图的生成树。
+
+> 当图中的边具有权值时，总会有一个生成树的边的权值之和小于或者等于其它生成树的边的权值之和，这就是最小生成子树。
+
+![][1]
+
+---
+
+**MST性质：**
+
+> 设一个带权无向图$G(V,E,W)$ （$V$代表点集，$E$代表边集，$W$代表权值集），且$T$为$G$的一颗生成树，对于$E$中任意一条不属于$T$的边$e$，将其加入$T$中，会产生一条环（否则$T$不连通），如果$e$始终是环中**权值最大**的一条边，那么说明$T$满足$MST$性质。
+
+---
 
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
