--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -41,7 +41,7 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 最简单的想法是，每设置一个阈值，我们对图进行一次 connected components 判断，这样效率太低，实际上我们可以利用最小生成子树来达到我们的目的。
 
-我们来简单分析一下，我们的目标是希望找到一个边的集合，我们删除这个集合里面的任何一条边，图的连通性都会发生变化（某个连通区域会分裂成两个连通区域），同时要确保权重最小的边可以连接分裂后的连通区域。
+我们来简单分析一下，我们的目标是希望找到一个边的集合，我们删除这个集合里面的任何一条边，图的连通性都会发生变化（某个连通区域会分裂成两个连通区域），同时要确保权重最小的边可以连接分裂后的连通区域。最小生成树可以很方便帮我们达成目标。
 
 >  The right thing to do is to find a minimal set of edges such that dropping any edge from the set causes a disconnection of components. But we need more, we need this set to be such that there is no lower weight edge that could connect the components. Fortunately graph theory furnishes us with just such a thing: the minimum spanning tree of the graph.
 
@@ -65,9 +65,30 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 ---
 
+#### 提取团簇
+
+观察层次聚类的结果，我们可以发现，在每个分裂点可能发生两种情况：
+
+> - 当前团簇分裂为两个子团簇
+> - 当前团簇分裂为一个大的团簇和几个离散点。
+
+我们有必要定义下团簇的最小样本数，不妨假设$\text{minimum cluster size}=5$，我们现在过滤掉分裂过程中产生的离散点，可以得到下图，
+
+![][6]
+
+每个点就有了自己的生存周期，$\lambda_{\mathrm{birth}},\lambda_{\mathrm{death}}$，我们可以定义一个指标来衡量团簇的稳定性(stability)，
+
+$$
+\begin{align*}
+s_{\mathrm{cluster}}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\mathrm{birth}})\\
+\lambda & = \frac{1}{\mathrm{distance}}
+\end{align*}
+$$
+
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/distance1.svg
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/m_reach.png
 [4]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchy_cluster.png
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/minimum_sp_tree.png
+[6]:http://7xjbdi.com1.z0.glb.clouddn.com/condense_cluster.png
