--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -80,7 +80,7 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 $$
 \begin{align*}
-s_{\mathrm{cluster}}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\mathrm{birth}})\\
+s_{\mathrm{cluster}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\mathrm{birth}})\\
 \lambda & = \frac{1}{\mathrm{distance}}
 \end{align*}
 $$
