--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -76,12 +76,12 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 ![][6]
 
-每个点就有了自己的生存周期，$\lambda_{\mathrm{birth}},\lambda_{\mathrm{death}}$，我们可以定义一个指标来衡量团簇的稳定性(stability)，
+每个点就有了自己的生存周期：$\lambda_{\mathrm{birth}},\lambda_{\mathrm{death}}$，我们可以定义一个指标来衡量团簇的稳定性(stability)，
 
 $$
 \begin{align*}
-s_{\mathrm{cluster}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\mathrm{birth}})\\
-\lambda & = \frac{1}{\mathrm{distance}}
+\lambda & = \frac{1}{\mathrm{distance}}\\
+s_{\mathrm{cluster}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\mathrm{birth}})
 \end{align*}
 $$
 
