--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -78,7 +78,7 @@ $$d_{\mathrm{mreach-}k}(a,b) = \max \{\mathrm{core}_k(a), \mathrm{core}_k(b), d(
 
 我们先介绍几个基本概念：$\lambda_{\mathrm{birth}},\lambda_{\mathrm{death}},\lambda_p$，
 
-$$\lambda & = \frac{1}{\mathrm{distance}}$$
+$$\lambda = \frac{1}{\mathrm{distance}}$$
 
 > $\lambda_{\mathrm{birth}}$：团簇形成时的 $\lambda$ 值 
 > $\lambda_{\mathrm{death}}$：团簇分裂为两个子团簇时的 $\lambda$ 值 
