--- a/_posts/2016-06-30-HDBSCAN.md
+++ b/_posts/2016-06-30-HDBSCAN.md
@@ -94,6 +94,9 @@ s_{\mathrm{cluster}} & = \sum_{p \in \mathrm{cluster}} (\lambda_p - \lambda_{\ma
 \end{align*}
 $$
 
+我们希望团簇稳定性越强越好，在团簇的每次的分裂中，如果分裂而成的两个子团簇的稳定性之和大于该团簇，那么我们就支持这次分裂，反之我们清除掉这次分裂，这样由叶子节点由下而上的遍历到根节点，我们便可以选出所需的团簇，
+
+![][7]
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/300px-Minimum_spanning_tree.svg.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/distance1.svg
@@ -101,3 +104,4 @@ $$
 [4]:http://7xjbdi.com1.z0.glb.clouddn.com/hierarchy_cluster.png
 [5]:http://7xjbdi.com1.z0.glb.clouddn.com/minimum_sp_tree.png
 [6]:http://7xjbdi.com1.z0.glb.clouddn.com/condense_cluster.png
+[7]:http://7xjbdi.com1.z0.glb.clouddn.com/get_cluster.png
