--- a/_posts/2016-06-27-GBDT.md
+++ b/_posts/2016-06-27-GBDT.md
@@ -30,9 +30,24 @@ GBDT+LR:
 推荐系统：
 http://km.oa.com/group/19658/articles/show/209927?kmref=search&from_page=1&no=4&is_from_iso=1
 
+---
+
+#### XGBoost vs GBDT
+
+> 以下内容主要摘自[wepon](http://2hwp.com/)博客。
+
+- 传统GBDT在优化时只用到一阶导数信息，xgboost则对代价函数进行了二阶泰勒展开，同时用到了一阶和二阶导数。顺便提一下，xgboost工具支持自定义代价函数，只要函数可一阶和二阶求导。
+
+![][1]
+
+---
+
 #### 新进展
 
 [Support Dropout on XGBoost](http://dmlc.ml/xgboost/2016/07/02/support-dropout-on-xgboost.html)
+
+[1]:http://7xjbdi.com1.z0.glb.clouddn.com/xgb%2BTaylor.png
+
 
 [^1]:[决策树模型组合之随机森林与GBDT](http://www.cnblogs.com/LeftNotEasy/archive/2011/03/07/random-forest-and-gbdt.html)
 [^2]:[深入浅出ML之Boosting家族](http://www.52caml.com/head_first_ml/ml-chapter6-boosting-family/)
