--- a/_posts/2016-06-27-GBDT.md
+++ b/_posts/2016-06-27-GBDT.md
@@ -40,6 +40,10 @@ http://km.oa.com/group/19658/articles/show/209927?kmref=search&from_page=1&no=4&
 
 ![][1]
 
+- xgboost在代价函数里加入了正则项，用于控制模型的复杂度。正则项里包含了树的叶子节点个数、每个叶子节点上输出的score的L2模的平方和。从Bias-variance tradeoff角度来讲，正则项降低了模型的variance，使学习出来的模型更加简单，防止过拟合，这也是xgboost优于传统GBDT的一个特性。
+
+![][2]
+
 ---
 
 #### 新进展
@@ -47,6 +51,7 @@ http://km.oa.com/group/19658/articles/show/209927?kmref=search&from_page=1&no=4&
 [Support Dropout on XGBoost](http://dmlc.ml/xgboost/2016/07/02/support-dropout-on-xgboost.html)
 
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/xgb%2BTaylor.png
+[2]:http://7xjbdi.com1.z0.glb.clouddn.com/xgb_c_t.png
 
 
 [^1]:[决策树模型组合之随机森林与GBDT](http://www.cnblogs.com/LeftNotEasy/archive/2011/03/07/random-forest-and-gbdt.html)
