--- a/_posts/2016-09-09-tencent.md
+++ b/_posts/2016-09-09-tencent.md
@@ -7,38 +7,37 @@ date:   2016-07-02 8:30
 categories: 机器学习
 ---
 
-# 腾讯笔试
 
 ### 矩阵论
 
-##### 方阵可逆的充要条件
+#### 方阵可逆的充要条件
 
-> - $$\det (A) \neq 0$$
-> - $$rank(A) = n$$
+> - $\det (A) \neq 0$
+> - $rank(A) = n$
 > - A 的列（行）向量组线性无关
 > - 齐次线性方程组 $$AX=0$$ 仅有零解
 > - 非齐次线性方程组 $$AX=b$$ 有唯一解
 > - A 的特征值都不为 0 ($$\det (\lambda I - A)=0$$)
 
-##### 线性方程组的解（齐次和非齐次）
+#### 线性方程组的解（齐次和非齐次）
 
 - A 为方阵
 
 > $$AX=0$$ 只有零解   $$\Leftrightarrow$$   $$|A| \neq 0$$      
 > $$AX=b$$ 有非零解   $$\Leftrightarrow$$   $$|A| \neq 0$$ 
 
-- 一般情况($$m \times n$$)，矩阵的秩，线性无关
+- 一般情况($m \times n$)，矩阵的秩，线性无关
 
-> $$AX=0$$ 有非零解 $$\Leftrightarrow$$ A 的列向量组线性相关($$r(A)<n$$)
+> $AX=0$ 有非零解 $\Leftrightarrow$ A 的列向量组线性相关($r(A)<n$)
 > 对于 $$AX=b$$：
-> - 当 $$r([A,b])>r(A)$$时，$$AX = b$$无解；
-> - 当 $$r([A,b])=r(A)=n$$时，$$AX = b$$有唯一解；
-> - 当 $$r([A,b])=r(A)<n$$时，$$AX=b$$有无穷多组解；
+> - 当 $r([A,b])>r(A)$时，$AX = b$无解；
+> - 当 $r([A,b])=r(A)=n$时，$AX = b$有唯一解；
+> - 当 $r([A,b])=r(A)<n$时，$AX=b$有无穷多组解；
 
 - 秩的基本性质
 
-> - $$r(A) \leq m$$ 且 $$r(A) \leq n$$
-> - $$r([A,B]) \geq r(A)$$
+> - $r(A) \leq m$ 且 $r(A) \leq n$
+> - $r([A,B]) \geq r(A)$
 
 - 特征向量
 
@@ -50,17 +49,17 @@ categories: 机器学习
 
 - 样本均值和方差
 
-> 样本均值：$$\overline{X}_n  =(X_1+\cdots+X_n)/n$$      
-样本方差：$${S_n}^2 =\frac{1}{n-1}\sum_{i=1}^n\left(X_i-\overline{X}_n\right)^2$$
+> 样本均值：$\overline{X}_n  =(X_1+\cdots+X_n)/n$     
+样本方差：${S_n}^2 =\frac{1}{n-1}\sum_{i=1}^n\left(X_i-\overline{X}_n\right)^2$
 
 - 期望和方差
 
-> 期望： $$E(X)=\sum x_kp_k$$      
-> 方差： $$D(X)=E[X-E(X)]^2=E(X^2)-[E(X)]^2$$      
-> $$E(X^2)=\sum x_k^2p_k$$
+> 期望： $E(X)=\sum x_kp_k$    
+> 方差： $D(X)=E[X-E(X)]^2=E(X^2)-[E(X)]^2$   
+> $E(X^2)=\sum x_k^2p_k$
 
 
-- 3$$\sigma$$ 原则
+- 3$\sigma$ 原则
 
 ![][1]
 
@@ -68,7 +67,7 @@ categories: 机器学习
 
 - 重复抽样与不重复抽样
 
-> $$\mu_x^2=\frac{\sigma^2}{n}$$ $$\rightarrow$$ $$\mu_x^2=\frac{\sigma^2}{n}(\frac{N-n}{N-1})$$ (不重复抽样的平均误差总是小于重复抽样的平均误差)
+> $\mu_x^2=\frac{\sigma^2}{n}$ $\rightarrow$ $\mu_x^2=\frac{\sigma^2}{n}(\frac{N-n}{N-1})$ (不重复抽样的平均误差总是小于重复抽样的平均误差)
 
 - 假设检验
 
