--- a/_posts/2016-09-09-tencent.md
+++ b/_posts/2016-09-09-tencent.md
@@ -23,8 +23,8 @@ categories: 机器学习
 
 - A 为方阵
 
-> $$AX=0$$ 只有零解   $$\Leftrightarrow$$   $$|A| \neq 0$$      
-> $$AX=b$$ 有非零解   $$\Leftrightarrow$$   $$|A| \neq 0$$ 
+> $AX=0$ 只有零解   $\Leftrightarrow$   $|A| \neq 0$     
+> $AX=b$ 有非零解   $\Leftrightarrow$   $|A| \neq 0$
 
 - 一般情况($m \times n$)，矩阵的秩，线性无关
 
