--- a/_posts/2016-07-03-SVM_Notes.md
+++ b/_posts/2016-07-03-SVM_Notes.md
@@ -13,7 +13,7 @@ categories: 机器学习
 
 ![][1]
 
-我们可以从鲁棒性的角度来考虑，一个好的模型应该对噪声具有很强的容忍性。最右边的线离与它最近的点是最远的，能够容忍较大的测量误差，从鲁棒性的角度来讲是最佳的。
+> 我们可以从鲁棒性的角度来考虑，一个好的模型应该对噪声具有很强的容忍性。最右边的线离与它最近的点是最远的，能够容忍较大的测量误差，从鲁棒性的角度来讲是最佳的。
 
 ![][2]
 
@@ -96,6 +96,35 @@ categories: 机器学习
 ![][16]
 
 
+----------
+
+
+#### Support Vectors
+
+> 整个SVM的求解过程我们可以概括为：先根据对偶确定Support Vectors，然后根据Support Vectors确定最佳的分类超平面。
+
+![][20]
+
+----------
+
+
+![][17]
+
+> 那么对偶问题的计算复杂度真的与样本维度无关吗？
+
+![][19]
+
+下一篇重点讨论。
+
+
+----------
+
+
+#### 总结
+
+![][18]
+
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_060536.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_061310.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_062256.png
@@ -112,3 +141,7 @@ categories: 机器学习
 [14]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_082803.png
 [15]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_083209.png
 [16]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_083519.png
+[17]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_102444.png
+[18]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_103516.png
+[19]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_104303.png
+[20]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-16_1112604.png
