--- a/_posts/2016-07-04-SVM_Notes2.md
+++ b/_posts/2016-07-04-SVM_Notes2.md
@@ -55,20 +55,20 @@ categories: 机器学习
 
 ![][6]
 
-这个时候我们可以引入松弛变量，允许我们的数据在一定程度上偏离超平面，但是我们同时希望偏离量越小越好。
+我们可以引入松弛变量，允许我们的数据在一定程度上偏离超平面，但是我们同时希望偏离量越小越好。
 ![][9]
 ![][7]
 
 > 其中C是一个参数，用于控制目标函数中两项（“寻找margin最大的超平面”和“保证数据点偏差量最小”）之间的权重。
 
 ![][8]
+![][14]
 
 然后套用之前Hard-Margin SVM的步骤：
 
 - 拉格朗日乘数法（转化为无约束）
 
 ![][10]
-![][14]
 
 ----------
 
