--- a/_posts/2016-07-08-MLJF_11.md
+++ b/_posts/2016-07-08-MLJF_11.md
@@ -9,7 +9,6 @@ categories: 机器学习
 
 ![][1]
 
-
 ----------
 
 #### AdaBoost Decision Tree
@@ -17,7 +16,6 @@ categories: 机器学习
 我们知道Adaboost是通过对不同样本进行加权的方式来训练出不同的模型。
 
 ![][2]
-
 
 ----------
 
@@ -28,15 +26,133 @@ categories: 机器学习
 
 ![][3]
 
-
 ----------
 
 那么对于每个模型，我们也要做一些相应的限制。
 
 ![][4]
 
+
+----------
+
+#### Adaboost 损失函数
+
+![][5]
+
+> Adaboost 的优化目标就是使得所有样本的权重和最小。
+
+![][6]
+
+
+----------
+
+#### 优化损失函数
+
+我们可以同样使用梯度下降法来优化损失函数，只是我们现在的对象不是向量而是函数。
+
+![][7]
+
+
+----------
+
+
+现在我们的问题转化为最小化： $\sum_{n=1}^N u_n^{(t)}(-y_nh(x_n))$
+
+![][8]
+
+
+----------
+
+
+更进一步，我们确定每一步的最佳步长：$\eta$
+
+![][9]
+
+
+----------
+
+#### Gradient Boosting
+
+我们前面提到Adaboost使用的是指数损失函数，那么如果我们使用其它的损失函数呢？
+
+![][10]
+
+
+----------
+
+Gradient Boosting就是这么干的，对不同的损失函数做了扩展。
+
+![][11]
+
+
+----------
+
+#### GradientBoost for Regression
+
+我们来看下平方损失函数，
+
+![][12]
+
+
+----------
+
+梯度下降，
+
+![][13]
+
+
+----------
+
+确定 $\eta$,
+
+![][14]
+
+
+----------
+
+整体流程：
+
+![][15]
+
+
+----------
+
+### Ensemble Models
+
+#### Blending Models
+
+![][16]
+
+
+----------
+
+#### Aggregation-Learning Models
+
+![][17]
+
+
+----------
+
+#### Aggregation of Aggregation Models
+
+![][18]
+
+
 [1]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-24_134156.png
 [2]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-24_144412.png
 [3]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-24_150605.png
 [4]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-24_150912.png
-
+[5]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-25_025531.png
+[6]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-25_040255.png
+[7]:http://7xjbdi.com1.z0.glb.clouddn.com/compressed-vojk.png
+[8]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_015855.png
+[9]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_021005.png
+[10]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_021842.png
+[11]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_022112.png
+[12]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_024722.png
+[13]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_025620.png
+[14]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_031317.png
+[15]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_072147.png
+[16]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_072721.png
+[17]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_073016.png
+[18]:http://7xjbdi.com1.z0.glb.clouddn.com/2016-09-26_073401.png
